029_num_seq/grade.txt
Grading at 09/20/2018:14:34:36.658781
For commit ID 23aa4b05141e1b95c1dacead83e61ce9934fbc0b
[32mSuccessfully compiled ['step1.c'].[0m
Checking for 'int seq1(int x)'
[32mfound 'int seq1(int x)' in your source code 'step1.c'[0m
Checking for 'void printSeq1Range(int low, int high)'
[32mfound 'void printSeq1Range(int low, int high)' in your source code 'step1.c'[0m
step1.c: In function ‘main’:
step1.c:62:10: error: ‘EXIT_SUCCESS’ undeclared (first use in this function)
   return EXIT_SUCCESS;
          ^~~~~~~~~~~~
step1.c:62:10: note: each undeclared identifier is reported only once for each function it appears in

[31mError: failed to compile your code[0m
[31merror there is output in your function seq() in step1.c[0m
[32mSuccessfully compiled ['step2.c'].[0m
Checking for 'int seq2(int x)'
[32mfound 'int seq2(int x)' in your source code 'step2.c'[0m
Checking for 'int sumSeq2(int low, int high)'
[32mfound 'int sumSeq2(int low, int high)' in your source code 'step2.c'[0m
step2.c: In function ‘main’:
step2.c:59:10: error: ‘EXIT_SUCCESS’ undeclared (first use in this function)
   return EXIT_SUCCESS;
          ^~~~~~~~~~~~
step2.c:59:10: note: each undeclared identifier is reported only once for each function it appears in

[31mError: failed to compile your code[0m
[31merror there is output in your function seq() in step2.c[0m
[32mSuccessfully compiled ['step3.c'].[0m
Checking for 'int seq3(int x, int y)'
[32mfound 'int seq3(int x, int y)' in your source code 'step3.c'[0m
Checking for 'int countEvenInSeq3Range(int xLow, int xHi, int yLow, int yHi)'
[32mfound 'int countEvenInSeq3Range(int xLow, int xHi, int yLow, int yHi)' in your source code 'step3.c'[0m
step3.c: In function ‘main’:
step3.c:90:10: error: ‘EXIT_SUCCESS’ undeclared (first use in this function)
   return EXIT_SUCCESS;
          ^~~~~~~~~~~~
step3.c:90:10: note: each undeclared identifier is reported only once for each function it appears in

[31mError: failed to compile your code[0m
[31merror there is output in your function seq() in step3.c[0m
Overall Grade: NO GRADE YET
